--- a/login.html
+++ b/login.html
@@ -61,6 +61,31 @@
                     </div>
                 </div>
             </div>
+
+            <div id="signup" class="modal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2 class="modal-title">
+                                Sign Up
+                            </h2>
+                        </div>
+                        <div class="modal-body">
+                            <form class="signup-form">
+                                <label for="username">Username:</label>
+                                <input type="text" id="username" required>
+                                <label for="password">Password:</label>
+                                <input type="text" id="password" required>
+                                <button type="button" class="btn btn-success" onclick="signup()">Sign Up</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
+                                Close
+                            </button>
+                        </div>
+                    </div>
+                </div>
     </section>
 
     <script src="./assets/js/script.js"></script>
