--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
-                            Close
+                            Exit
                         </button>
                     </div>
                 </div>
@@ -72,16 +72,16 @@
                         </div>
                         <div class="modal-body">
                             <form class="signup-form">
-                                <label for="username">Username:</label>
-                                <input type="text" id="username" required>
-                                <label for="password">Password:</label>
-                                <input type="text" id="password" required>
+                                <label for="newUsername">Username:</label>
+                                <input type="text" id="newUsername" required>
+                                <label for="newPassword">Password:</label>
+                                <input type="text" id="newPassword" required>
                                 <button type="button" class="btn btn-success" onclick="signup()">Sign Up</button>
                             </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-dark btn-lg" data-dismiss="modal">
-                                Close
+                                Exit
                             </button>
                         </div>
                     </div>
