--- a/login.html
+++ b/login.html
@@ -44,9 +44,9 @@
                     <div class="modal-body">
                         <form class="login-form">
                             <label for="username">Username:</label>
-                            <input type="text" id="username" required>
+                            <input type="text" id="username" class="form-control" required>
                             <label for="password">Password:</label>
-                            <input type="text" id="password" required>
+                            <input type="text" id="password" class="form-control">
                             <div class="form-check">
                                 <label for="rememberUser">Remember Me:</label>
                                 <input type="checkbox" id="rememberUser">
@@ -74,9 +74,9 @@
                     <div class="modal-body">
                         <form class="signup-form">
                             <label for="newUsername">Username:</label>
-                            <input type="text" id="newUsername" required>
+                            <input type="text" id="newUsername" class="form-control">
                             <label for="newPassword">Password:</label>
-                            <input type="text" id="newPassword" required>
+                            <input type="text" id="newPassword" class="form-control" required>
                             <button type="button" class="btn btn-success" onclick="signup()">Sign Up</button>
                         </form>
                     </div>
