--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/login-style.css">
     <title>Log in</title>
 </head>
 
@@ -25,6 +25,10 @@
         </div>
     </header>
 
+<!--
+Create section to contain login and sign up buttons.
+Buttons styled with Bootstrap and given functionality to trigger their respective JS functions.
+-->
     <section class="container">
         <button class="btn btn-success btn-lg" onclick="loginBox()">
             Log in
@@ -33,6 +37,10 @@
             Sign Up
         </button>
 
+        <!--
+            Div created to store login button and form.
+            Class naming conventions follow Bootstrap modal.
+        -->
         <div id="login" class="modal">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -43,17 +51,29 @@
                     </div>
                     <div class="modal-body">
                         <form class="login-form">
+                            <!--
+                                Labels added for username and password fields; input styling is given by Bootstrap's form-control. Fields made required.
+                            -->
                             <label for="username">Username:</label>
                             <input type="text" id="username" class="form-control" required>
                             <label for="password">Password:</label>
                             <input type="text" id="password" class="form-control">
+                            <!--
+                                Div using Bootstrap's form-check to allow a checkbox to remember user's login information.
+                            -->
                             <div class="form-check">
                                 <label for="rememberUser">Remember Me:</label>
                                 <input type="checkbox" id="rememberUser">
                             </div>
+                            <!--
+                                Button triggers the login() function when clicked.
+                            -->
                             <button type="button" class="btn btn-success" onclick="login()">Login</button>
                         </form>
                     </div>
+                    <!--
+                        "Exit" button added to footer to exit the modal window.
+                    -->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
                             Exit
@@ -90,7 +110,7 @@
         </div>
     </section>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/login-script.js"></script>
 
 </body>
 </html>
