--- a/login.html
+++ b/login.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--
+        jQuery, Bootstrap CSS and Bootstrap JS linked. CSS file linked.
+    -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="assets/css/login-style.css">
     <title>Log in</title>
 </head>
@@ -14,11 +16,14 @@
 <body>
     <header class="header">
         <div>
+            <!--
+                Nav buttons + icon linked to pages.
+            -->
             <nav>
-                <a href="#"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
+                <a href="index.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                    <li class="nav-list"><a href="/">Login</a></li>
-                    <li class="nav-list"><a href="/">Submit</a></li>
+                    <li class="nav-list"><a href="login.html">Login</a></li>
+                    <li class="nav-list"><a href="submit.html">Submit</a></li>
                     <li class="nav-list"><a href="/">Contact</a></li>
                 </ul>
             </nav>
@@ -123,6 +128,9 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
         </div>
     </section>
 
+    <!--
+        Script linked.
+    -->
     <script src="./assets/js/login-script.js"></script>
 
 </body>
