--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/style.css" rel="stylesheet" />
+    <link href="./assets/main.css" rel="stylesheet" />
 </head>
 
 <body style="text-align: center">
@@ -68,7 +68,7 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
 
 </body>
