Added ids to footers to append paragraphs to footer

--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
                     <!--
                         "Exit" button added to footer to exit the modal window.
                     -->
-                    <div class="modal-footer">
+                    <div class="modal-footer" id="login-footer">
                         <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
                             Exit
                         </button>
@@ -118,7 +118,7 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
                     <!--
                         "Exit" button added to footer to exit the modal window.
                     -->                    
-                    <div class="modal-footer">
+                    <div class="modal-footer" id="signup-footer">
                         <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
                             Exit
                         </button>
