Updated comments on footers

--- a/login.html
+++ b/login.html
@@ -78,6 +78,7 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
                     </div>
                     <!--
                         "Exit" button added to footer to exit the modal window.
+                        ID added to be able to append paragraph for success/failure message.                    
                     -->
                     <div class="modal-footer" id="login-footer">
                         <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
@@ -117,6 +118,7 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
                     </div>
                     <!--
                         "Exit" button added to footer to exit the modal window.
+                        ID added to be able to append paragraph for success/failure message.
                     -->                    
                     <div class="modal-footer" id="signup-footer">
                         <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
