--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
     </header>
 
 <!--
-Create section to contain login and sign up buttons.
-Buttons styled with Bootstrap and given functionality to trigger their respective JS functions.
+    Create section to contain login and sign up buttons.
+    Buttons styled with Bootstrap and given functionality to trigger their respective JS functions.
 -->
     <section class="container">
         <button class="btn btn-success btn-lg" onclick="loginBox()">
@@ -128,6 +128,7 @@ Buttons styled with Bootstrap and given functionality to trigger their respectiv
                 </div>
             </div>
         </div>
+        <p id="signup-success"></p>
     </section>
 
     <!--
