Link all pages to nav bar and added footer to login and submit page

--- a/submit.html
+++ b/submit.html
@@ -15,11 +15,11 @@
     <div id="main-display">
         <div>
             <nav>
-                <a href="#"><img src="flavour-fusion-icon.png" id="icon"></a>
+                <a href="/main.html"><img src="flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                        <li class="nav-list"><a href="/">Login</a></li>
-                        <li class="nav-list"><a href="/">Submit</a></li>
-                        <li class="nav-list"><a href="/">Contact</a></li>
+                        <li class="nav-list"><a href="/login.html">Login</a></li>
+                        <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                        <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
             <div>
@@ -43,6 +43,16 @@
     <div></div>
   
   </form>
+
+  <div class="contact">
+    <div class="contact-header">
+        <h1>Contact Us</h1>
+    </div>
+    <div id="contact-info">
+        <p>Email: group5@mail.com</p>
+        <p>Contact Number: xxx-xxx-xxxx</p>
+    </div>
+</div>
   
  <script src="./assets/js/script.js"></script>   
 </body>
