--- a/login.html
+++ b/login.html
@@ -20,11 +20,11 @@
                 Nav buttons + icon linked to pages.
             -->
             <nav>
-                <a href="index.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
+                <a href="/main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                    <li class="nav-list"><a href="login.html">Login</a></li>
-                    <li class="nav-list"><a href="submit.html">Submit</a></li>
-                    <li class="nav-list"><a href="/">Contact</a></li>
+                    <li class="nav-list"><a href="/login.html">Login</a></li>
+                    <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                    <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -130,6 +130,16 @@
         </div>
         <p id="signup-success"></p>
     </section>
+
+    <div class="contact">
+        <div class="contact-header">
+            <h1>Contact Us</h1>
+        </div>
+        <div id="contact-info">
+            <p>Email: group5@mail.com</p>
+            <p>Contact Number: xxx-xxx-xxxx</p>
+        </div>
+    </div>
 
     <!--
         Script linked.
