--- a/recipe.html
+++ b/recipe.html
@@ -35,6 +35,7 @@
             <ol id="steps"></ol>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./assets/js/recipe-script.js"></script>
     <script src="./assets/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
