Removed unecessary functions & comments

--- a/recipe.html
+++ b/recipe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./assets/flavour-fusion.png" alt="A logo with a fork, apple, and knife">
+        <a href="#main.html"><img class="logo" src="./assets/flavour-fusion.png" alt="A logo with a fork, apple, and knife"></a>
         <div class="nav-bar">
             <a>Home</a>
             <a>Log in</a>
