--- a/recipe.html
+++ b/recipe.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="#main.html"><img class="logo" src="./assets/flavour-fusion.png" alt="A logo with a fork, apple, and knife"></a>
-        <div class="nav-bar">
-            <a>Home</a>
-            <a>Log in</a>
-            <a>Submit</a>
-            <a>Contact</a>
-        </div>
+        <img src="./assets/images/flavour-fusion-icon.png" class="logo">
+        <ul id="nav-bar">
+                <li class="nav-list"><a href="/login.html">Login</a></li>
+                <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                <li class="nav-list"><a href="#contact-info">Contact</a></li>
+        </ul>
     </header>
     <main>
         <div class="ingredients"> 
