Changed file names and linked the files accordingly.

--- a/submit.html
+++ b/submit.html
@@ -9,13 +9,13 @@
     </script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <title>Submit Your Recipe!</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/submit.css">
 </head>
 <body style="text-align: center">
     <div id="main-display">
         <div>
             <nav>
-                <a href="/main.html"><img src="flavour-fusion-icon.png" id="icon"></a>
+                <a href="/main.html"><img src="assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
                         <li class="nav-list"><a href="/login.html">Login</a></li>
                         <li class="nav-list"><a href="/submit.html">Submit</a></li>
@@ -54,6 +54,6 @@
     </div>
 </div>
   
- <script src="./assets/js/script.js"></script>   
+ <script src="./assets/js/submit.js"></script>   
 </body>
 </html>
