Fetched vegan API

--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
                         placeholder="Enter your desired dish" />
                     <button type="submit" class="btn btn-dark">Search</button>
                 </form>
+                <button id="vegan-button">Go Vegan!</button> 
                 <div id="search-results">
                 </div>
             </div>
@@ -57,6 +58,7 @@
                     <li>Enter the desired dish in the search bar.</li>
                     <li>Click the "Search" button.</li>
                     <li>Click on a dish to see the recipe.</li>
+                    <li>Want vegan option? Click our <strong id="go-vegan">Go Vegan</strong> button! </li>
         </div>
       </div>
 
