Fixed all broken nav bar links

--- a/login.html
+++ b/login.html
@@ -20,10 +20,10 @@
                 Nav buttons + icon linked to pages.
             -->
             <nav>
-                <a href="/main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
+                <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                    <li class="nav-list"><a href="/login.html">Login</a></li>
-                    <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                    <li class="nav-list"><a href="login.html">Login</a></li>
+                    <li class="nav-list"><a href="submit.html">Submit</a></li>
                     <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
