--- a/submit.html
+++ b/submit.html
@@ -15,10 +15,10 @@
     <div id="main-display">
         <div>
             <nav>
-                <a href="/main.html"><img src="flavour-fusion-icon.png" id="icon"></a>
+                <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                        <li class="nav-list"><a href="/login.html">Login</a></li>
-                        <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                        <li class="nav-list"><a href="login.html">Login</a></li>
+                        <li class="nav-list"><a href="submit.html">Submit</a></li>
                         <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
