--- a/recipe.html
+++ b/recipe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img href="main.html" src="./assets/images/flavour-fusion-icon.png" class="logo">
+        <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
         <ul id="nav-bar">
                 <li class="nav-list"><a href="login.html">Login</a></li>
                 <li class="nav-list"><a href="submit.html">Submit</a></li>
