Added initial logic for local storage previous cards

--- a/recipe.html
+++ b/recipe.html
@@ -23,8 +23,7 @@
             </div>
             <h3 class="search">Previously Searched:</h3>
             <ul class="history">
-                <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg">Spaghetti and Meatball Sub</li>
-                <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg">Spaghetti and Meatball Sub</li>
+                <li class="history-card"><img src="https://20fix.com/xfood/img/chicken-soup-with-caramelized-ginger.jpg"></li>
             </ul>
         </div>
         <div class="introduction">
