Git pull main changes.

--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
     <div id="main-display">
         <div>
             <nav>
-                <a href="/main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
+                <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
                 <ul id="nav-bar">
-                        <li class="nav-list"><a href="./login.html">Login</a></li>
-                        <li class="nav-list"><a href="./submit.html">Submit</a></li>
+                        <li class="nav-list"><a href="login.html">Login</a></li>
+                        <li class="nav-list"><a href="submit.html">Submit</a></li>
                         <li class="nav-list"><a href="#contact-info">Contact</a></li>
                 </ul>
             </nav>
@@ -32,6 +32,7 @@
                         placeholder="Enter your desired dish" />
                     <button type="submit" class="btn btn-dark">Search</button>
                 </form>
+                <button id="vegan-button">Go Vegan!</button> 
                 <div id="search-results">
                 </div>
             </div>
@@ -57,6 +58,7 @@
                     <li>Enter the desired dish in the search bar.</li>
                     <li>Click the "Search" button.</li>
                     <li>Click on a dish to see the recipe.</li>
+                    <li>Want vegan option? Click our <strong id="go-vegan">Go Vegan</strong> button! </li>
         </div>
       </div>
 
