--- a/recipe.html
+++ b/recipe.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="./assets/images/flavour-fusion-icon.png" class="logo">
+        <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
         <ul id="nav-bar">
-                <li class="nav-list"><a href="/login.html">Login</a></li>
-                <li class="nav-list"><a href="/submit.html">Submit</a></li>
+                <li class="nav-list"><a href="login.html">Login</a></li>
+                <li class="nav-list"><a href="submit.html">Submit</a></li>
                 <li class="nav-list"><a href="#contact-info">Contact</a></li>
         </ul>
     </header>
