Change files name and linked them

--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
     </script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <title>Submit Your Recipe!</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/submit.css">
 </head>
 <body style="text-align: center">
     <div id="main-display">
@@ -54,6 +54,6 @@
     </div>
 </div>
   
- <script src="./assets/js/script.js"></script>   
+ <script src="./assets/js/submit.js"></script>   
 </body>
 </html>
