--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
 </head>
 
 <body style="text-align: center">
+    <div id="main-display">
         <div>
             <nav>
                 <a href="main.html"><img src="./assets/images/flavour-fusion-icon.png" id="icon"></a>
@@ -35,9 +36,6 @@
                 <div id="search-results">
                 </div>
             </div>
-        </div>
-        <div>
-            sidebar
         </div>
     </div>
 
